--- a/2048/Info.plist
+++ b/2048/Info.plist
@@ -15,13 +15,46 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.1.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>type3</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>8 x 8</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Easy</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>8</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>type2</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>6 x 6</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Moderate</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>6</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>type1</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>4 x 4</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Hard</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>4</string>
+		</dict>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
